Alteração da cor

--- a/form.html
+++ b/form.html
@@ -20,10 +20,10 @@
         cursor: pointer;
     }
     .pink{
-      background-color: #ff99aa;
+      background-color: #0F4C81;
     }
     .nav{
-       background-color: #ff99aa;
+       background-color: #0F4C81;
     }
   </style>
 </head>
