--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         cursor: pointer;
     }
     .pink{
-      background-color: #ff99aa;
+      background-color:#0F4C81;
       border-style: solid;
-      border-color: #ff99aa
+      border-color: #0F4C81;
     }
     .preto{
       background-color: #ffffff;
